--- a/app/src/main/res/anim/slide_right.xml
+++ b/app/src/main/res/anim/slide_right.xml
@@ -3,10 +3,12 @@
      android:fillAfter="true">
 
     <translate android:fromXDelta="-100%"
-               android:toXDelta="0%"
+               android:toXDelta="100%"
                android:fromYDelta="0%"
                android:toYDelta="0%"
-               android:duration="700"/>
+               android:duration="700"
+               android:repeatCount="infinite"
+               android:repeatMode="reverse"/>
 
     <!--fromYDelta-->
     <!--Iniciando o deslocamento Y Expresso: em pixels em relação à posição normal-->
