--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,7 @@
 
         <Button
                 android:id="@+id/button_login"
-                android:layout_width="50dp"
+                android:layout_width="match_parent"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
