--- a/app/src/main/res/anim/animation_recycle_view.xml
+++ b/app/src/main/res/anim/animation_recycle_view.xml
@@ -3,5 +3,4 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:animation="@anim/slide_down"
         android:delay="15%"
-        android:animationOrder="normal"
-/>
+        android:animationOrder="normal"/>
