--- a/app/src/main/res/anim/gravity.xml
+++ b/app/src/main/res/anim/gravity.xml
@@ -7,19 +7,6 @@
            android:interpolator="@android:anim/accelerate_interpolator"
            android:duration="1000"
            android:fillAfter="true"/>
-    <!--fromAlpha-->
-    <!--Começa o deslocamento de opacidade, onde 0.0 é transparente e 1.0 é opaco.-->
-
-    <!--toAlpha-->
-    <!--Deslocamento de opacidade final, onde 0.0 é transparente e 1.0 é opaco.-->
-
-    <!--interpolator-->
-    <!--Um interpolador define a taxa de mudança de uma animação. -->
-    <!--Isso permite que os efeitos básicos de animação (alfa, escala, translação, rotação) -->
-    <!--sejam acelerados, desacelerados, repetidos etc.-->
-
-    <!--fillAfter-->
-    <!--Quando definida como true, a transformação de animação é aplicada após a animação.-->
 
     <translate
             android:interpolator="@android:anim/linear_interpolator"
@@ -28,26 +15,5 @@
             android:duration="1000"
             android:startOffset="0"
             android:repeatMode="reverse"
-            android:repeatCount="infinite"
-           >
-    </translate>
-
-    <!--fromYDelta-->
-    <!--Iniciando o deslocamento Y Expresso: em pixels em relação à posição normal-->
-    <!--(como "5"), em porcentagem em relação à altura do elemento (como "5%") -->
-    <!--ou em porcentagem em relação à altura pai (como "5% p" ).-->
-
-    <!--toYDelta-->
-   <!--Fim do deslocamento Y Expresso: em pixels em relação à posição normal (como "5"),-->
-    <!--em porcentagem em relação à altura do elemento (como "5%") ou em porcentagem em relação à altura pai (como "5% p" ).-->
-
-    <!--startOffset-->
-    <!--A quantidade de milissegundos que a animação atrasa após start () é chamada.-->
-
-    <!--repeatCount-->
-    <!--Define quantas vezes a animação deve se repetir.-->
-
-    <!--repeatMode-->
-    <!--Defines the animation_recycle_view behavior when it reaches the end and the repeat count is greater than 0 or infinite.-->
-
+            android:repeatCount="infinite"/>
 </set>
