--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,8 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fadingEdge="horizontal"
+                android:fadingEdgeLength="20dp"
                 tools:listitem="@layout/item_home"/>
 
     </FrameLayout>
