--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -3,13 +3,15 @@
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
+            android:background="@drawable/background_home"
             android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_height="100dp"
+                android:layout_margin="8dp"
+                android:elevation="10dp"
                 card_view:cardCornerRadius="5dp"
                 card_view:contentPadding="10dp">
 
@@ -23,20 +25,22 @@
                         android:layout_height="wrap_content"
                         android:textSize="23sp"
                         tools:text="Beer plus"
+                        android:layout_centerVertical="true"
                         android:textColor="@color/colorAccent"
                         android:layout_marginStart="16dp"
                         android:textStyle="bold"
-                        android:layout_marginTop="@dimen/margin_16dp"/>
+                        android:layout_gravity="center"/>
 
                 <TextView
                         android:id="@+id/body"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="247dp"
+                        android:layout_height="51dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         tools:text="Compre nos estabelecimentos parceiros da Beblue e tenha o seu dinheiro de volta a cada compra realizada"
                         android:textColor="@android:color/black"
-                        android:layout_below="@id/project"
                         android:layout_marginStart="16dp"
-                        android:layout_marginTop="1dp"/>
+                        android:layout_marginBottom="6dp"/>
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
