--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                 xmlns:tools="http://schemas.android.com/tools"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:background="@drawable/background_home"
-                 tools:context=".fragments.HomeFragment">
+    <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_home"
+            tools:context=".fragments.HomeFragment">
 
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fadingEdge="horizontal"
-                android:fadingEdgeLength="20dp"
+                android:fadingEdge="vertical"
+                android:fadingEdgeLength="40dp"
+                android:requiresFadingEdge="vertical"
                 tools:listitem="@layout/item_home"/>
 
     </FrameLayout>
