--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -3,46 +3,44 @@
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:background="@drawable/background_home"
             android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp"
+                android:layout_height="115dp"
                 android:layout_margin="8dp"
                 android:elevation="10dp"
                 card_view:cardCornerRadius="5dp"
                 card_view:contentPadding="10dp">
 
-            <RelativeLayout
+            <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
                 <TextView
                         android:id="@+id/project"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="23sp"
-                        tools:text="Beer plus"
-                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        tools:text="Beblue"
                         android:textColor="@color/colorAccent"
-                        android:layout_marginStart="16dp"
-                        android:textStyle="bold"
-                        android:layout_gravity="center"/>
+                        android:textStyle="bold"/>
 
                 <TextView
                         android:id="@+id/body"
-                        android:layout_width="247dp"
-                        android:layout_height="51dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
                         tools:text="Compre nos estabelecimentos parceiros da Beblue e tenha o seu dinheiro de volta a cada compra realizada"
                         android:textColor="@android:color/black"
                         android:layout_marginStart="16dp"
-                        android:layout_marginBottom="6dp"/>
+                        android:layout_marginBottom="6dp"
+                        android:layout_marginEnd="1dp"/>
 
-            </RelativeLayout>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </layout>
