--- a/app/src/main/res/drawable/card_view.xml
+++ b/app/src/main/res/drawable/card_view.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#fff"/>
-    <corners android:topLeftRadius="20dp"
-             android:topRightRadius="20dp"
-             android:bottomLeftRadius="20dp"
-             android:bottomRightRadius="20dp"/>
+    <corners android:topLeftRadius="10dp"
+             android:topRightRadius="10dp"/>
 </shape>
